[project]
name = "handel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "engine",
]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/test"]

[tool.uv.sources]
engine = { workspace = true }

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]
